--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/3fluentd-centralized-role-binding.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/3fluentd-centralized-role-binding.yaml.j2
@@ -1,11 +1,12 @@
+# {{ansible_managed}}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: {{boss__fluentd__centralized__shared_name}}-read
+  name: {{boss__fluentd__centralized__shared_name}}
 roleRef:
-  apiGroup: rbac.authorization.k8s.io
+  # apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{boss__fluentd__centralized__shared_name}}-read
+  name: {{boss__fluentd__centralized__shared_name}}
   apiGroup: ""
 subjects:
 - kind: ServiceAccount
