--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/4fluentd-centralized-configmap-0-3-0.yaml.j2
@@ -946,7 +946,7 @@ data:
 
 {% raw %}
     <filter unifi.syslog.**>
-      @type record_transformer
+      @type record_modifier
       enable_ruby true
       <record>
         # NOTE: If null, set default value to 127.0.0.1
