--- a/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/5fluentd-centralized.deploy.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluentd-centralized/templates/5fluentd-centralized.deploy.yaml.j2
@@ -9,7 +9,14 @@ metadata:
 {% endif %}
 spec:
   replicas: {{boss__fluentd__centralized__deployment_spec_replicas}}
-
+{% if boss__fluentd__centralized__deployment_spec_strategy is defined %}
+{% if boss__fluentd__centralized__deployment_spec_strategy == "disabled" %}
+  # strategy:
+{% else %}
+  strategy:
+{{ boss__fluentd__centralized__deployment_spec_strategy | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+{% endif %}
 {% if boss__fluentd__centralized__deployment_spec_matchLabels is defined %}
 {% if boss__fluentd__centralized__deployment_spec_matchLabels == "disabled" %}
   # selector:
