WIP: refactored efk

--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/elasticsearch-service.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/elasticsearch-service.yaml.j2
@@ -1,16 +1,31 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: elasticsearch-logging
+  name: {{boss__efk__shared_name}}-logging
   namespace: {{boss__efk__namespace_name}}
 {% if boss__efk__elasticsearch_service_labels is defined %}
+{% if boss__efk__elasticsearch_service_labels == "disabled" %}
+  # labels:
+{% else %}
   labels:
 {{ boss__efk__elasticsearch_service_labels | indent( width=4, indentfirst=True,blank=True) }}
 {% endif %}
+{% endif %}
+{% if boss__efk__elasticsearch_service_annotations is defined %}
+{% if boss__efk__elasticsearch_service_annotations == "disabled" %}
+  # annotations:
+{% else %}
+  annotations:
+{{ boss__efk__elasticsearch_service_annotations | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+{% endif %}
 spec:
+  type: {{boss__efk__elasticsearch_service_spec_type}}
+{% if boss__efk__elasticsearch_service_spec_ports is defined %}
   ports:
-  - port: 9200
-    protocol: TCP
-    targetPort: db
+{{ boss__efk__elasticsearch_service_spec_ports | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+{% if boss__efk__elasticsearch_service_spec_selector is defined %}
   selector:
-    k8s-app: elasticsearch-logging
+{{ boss__efk__elasticsearch_service_spec_selector | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
